[package]
name = "rs-hook"
version = "1.0.0"
edition = "2024"
description = "A lightweight, production-ready Discord webhook library"

[dependencies]
hyper = { version = "1.3", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
tokio-native-tls = "0.3"
native-tls = "0.2"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime_guess = "2.0"
thiserror = "1.0"
dotenv = "0.15"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
